<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="16dp"
    android:elevation="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_label_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_label_guess"
            android:textStyle="bold"
            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_value_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_label_guess"/>
        <TextView
            android:id="@+id/tv_label_generated_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_label_generated_number"
            android:textStyle="bold"
            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toBottomOf="@id/tv_label_guess"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_value_generated_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toBottomOf="@id/tv_value_guess"
            app:layout_constraintStart_toEndOf="@id/tv_label_generated_number"/>
        <TextView
            android:id="@+id/tv_label_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_label_result"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_value_result"/>
        <TextView
            android:id="@+id/tv_value_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/catamaran"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>