<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tech_background"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:layout_margin="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/description"
                android:fontFamily="@font/catamaran"
                android:text="@string/settings_description"
                android:textSize="18sp"
                android:layout_marginBottom="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/min_value"
                android:fontFamily="@font/catamaran"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_min"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/min_value"
                android:fontFamily="@font/catamaran"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_min">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_max"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                android:text="@string/btn_save_params"
                style="@style/GTNButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_max"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>