<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tech_background"
    tools:context=".ui.fragments.GuessingFragment">

    <Toolbar
        android:id="@+id/toolbar_guessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/guess_input">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/display_guess_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/catamaran_medium"
                android:textSize="20sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center"
                android:gravity="center">

                <include layout="@layout/segment"
                    android:id="@+id/first_digit"
                    android:gravity="center"
                    android:layout_height="150dp"
                    android:layout_width="100dp"
                    />
                <include layout="@layout/segment"
                    android:id="@+id/second_digit"
                    android:gravity="center"
                    android:layout_height="150dp"
                    android:layout_width="100dp"
                    />
                <include layout="@layout/segment"
                    android:id="@+id/third_digit"
                    android:gravity="center"
                    android:layout_height="150dp"
                    android:layout_width="100dp"
                    />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/GTNButton"
                android:text="@string/try_again"
                android:gravity="end|center"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/guess_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/guessing_input_hint"
        android:inputType="number"
        android:fontFamily="@font/catamaran_medium"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:text="@string/guessing_send_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guess_input"
        style="@style/GTNButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>